add get posts authorization